[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optiland"
version = "0.3.0"
authors = [
  { name = "Kramer Harrison", email = "kdanielharrison@gmail.com" },
]
description = "Open Source Optical Design in Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools",
    "numpy",
    "scipy",
    "pandas",
    "pyyaml",
    "matplotlib",
    "vtk",
    "tabulate",
    "numba",
    "requests",
    "seaborn"
]
license = { text = "MIT License" }

[project.urls]
Homepage = "https://github.com/HarrisonKramer/optiland"

[tool.setuptools]
packages = [
    "optiland",
    "optiland.analysis",
    "optiland.database",
    "optiland.fileio",
    "optiland.geometries",
    "optiland.materials",
    "optiland.optimization.operand",
    "optiland.optimization.variable",
    "optiland.optimization",
    "optiland.physical_apertures",
    "optiland.rays",
    "optiland.samples",
    "optiland.surfaces",
    "optiland.tolerancing",
    "optiland.visualization"
]

[tool.setuptools.package-data]
"optiland.database" = ["*.csv", "*.yml", "**/*.yml", "*.npy"]

[tool.ruff]
line-length = 88
exclude = ["tests"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
exclude = ["*.ipynb"]  # don't lint Jupyter notebooks

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "pytest>=8.3.5",
]
